2010-04-30: 1.23.1: Added new search method for metlin to diffreport. Time permitting, more to come (HMDB, KEGG via KEGGSOAP). Increase read speed of read.metlin
Added a MicroMass Waters specific scan/intensity correction due to missing scan from lock mass scan into xcmsSet. NB not in parallel code yet.

2010-03-12: 1.21.18:
Fixed nasty bug (index off-by-one) in split.xcmsRaw() which resulted in corrupt spectra 

2010-03-12: 1.21.17:
started adding MSn filtering into xcmsRaw and xcmsSet
Added a deepCopy() for xcmsRaw, otherwise copies would share xraw@env
2010-03-08: 1.21.16:
Fixed building the package from source on Mac
bugfix: group.nearest: fixed problems /w very small feature lists 
bugfix: retcor.{peakgroups,obiwarp}: re-reading the raw data to get scan aquisition times was for netcdf only 

2010-02-18: 1.21.15:
fixed handling of sampclasses / complex phenoData

2010-02-18: 1.21.14:
Added simple multicore support for all platforms
using snow cluster with local sockets.
snow is automatically used if (nSlaves > 1)
and Rmpi is not available.

Added snow as "suggested" package.

2010-02-16: 1.21.13:
Added RANN as "suggested" package. 

2010-02-14: 1.21.12:
minor code beautifications
Be more graceful if centWave does not find any peaks
- added progressInfo & callback functionality to xcmsSet
  e.g. test <- function(progress) cat(progress$group.nearest, "\n")
   xs <- xcmsSet(progressCallback=test)                            
   or: xs@progressCallback <- test                                 
   test with:  xsg <- group(xs, method="nearest")

- added headerfile to fix compiler warnings for fastMatch.c


2010-01-30: 1.21.11:
Allow an explicit center argument in retcor(method="obiwarp").

2010-01-06: 1.21.10:
Preparing for mzML support

2010-01-05: 1.21.9:
start to modularise the *.R files by extracting class definitions

2009-12-18: 1.21.8:
added absent(xset) / preseant(xset) function.
Fixed xcmsSet@filled in fillPeaks.chrom()
	   
2009-12-16: 1.21.7: